# covid19-who-situation-reports-importer

./: .gitignore  README.md  covid19_fetch_who_situation_reports.ipynb  parsr_client.py  pyproject.toml  who_covid_scraper.py
covid19_who_situation_reports_importer/: __init__.py  download_everything.py  notebook.ipynb  parsr_client.py  who_covid_scraper.py
covid19_who_situation_reports_importer/data/csv/: 20200301-sitrep-41-covid-19.csv  20200303-sitrep-43-covid-19.csv  20200305-sitrep-45-covid-19.csv  20200306-sitrep-46-covid-19.csv  20200308-sitrep-48-covid-19.csv  20200312-sitrep-52-covid-19.csv  20200313-sitrep-53-covid-19.csv  20200314-sitrep-54-covid-19.csv  20200318-sitrep-58-covid-19.csv  20200320-sitrep-60-covid-19.csv  20200324-sitrep-64-covid-19.csv  20200326-sitrep-66-covid-19.csv  (+2 more)
data/csv/: 20200227-sitrep-38-covid-19.csv  20200228-sitrep-39-covid-19.csv  20200229-sitrep-40-covid-19.csv  20200302-sitrep-42-covid-19.csv  20200304-sitrep-44-covid-19.csv  20200307-sitrep-47-covid-19.csv  20200309-sitrep-49-covid-19.csv  20200310-sitrep-50-covid-19.csv  20200311-sitrep-51-covid-19.csv  20200315-sitrep-55-covid-19.csv  20200316-sitrep-56-covid-19.csv  20200317-sitrep-57-covid-19.csv  20200319-sitrep-59-covid-19.csv  20200321-sitrep-61-covid-19.csv  20200322-sitrep-62-covid-19.csv  20200323-sitrep-63-covid-19.csv  20200325-sitrep-65-covid-19.csv  20200327-sitrep-67-covid-19.csv  20200329-sitrep-69-covid-19.csv  20200331-sitrep-71-covid-19.csv  20200401-sitrep-72-covid-19.csv
tests/: test_covid19_who_situation_reports_importer.py
